[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Mobile RPG Mockup.png" type="Texture" id=2]
[ext_resource path="res://Images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://StatsPanel.gd" type="Script" id=6]

[node name="Battle" type="Node"]
script = ExtResource( 4 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.176471 )
position = Vector2( 45, 80 )
texture = ExtResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( 46, 32 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 47.0
margin_right = 87.0
margin_bottom = 70.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP" type="Label" parent="UI/StatsPanel/HBoxContainer"]
margin_top = 2.0
margin_right = 25.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/HBoxContainer"]
margin_left = 29.0
margin_top = 2.0
margin_right = 54.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/HBoxContainer"]
margin_left = 58.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="TextBoxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 9.0
margin_top = 73.0
margin_right = 81.0
margin_bottom = 132.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton" type="Button" parent="UI/BattleActionButtons"]
margin_right = 32.0
margin_bottom = 13.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton2" type="Button" parent="UI/BattleActionButtons"]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 13.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton3" type="Button" parent="UI/BattleActionButtons"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 29.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton4" type="Button" parent="UI/BattleActionButtons"]
margin_left = 40.0
margin_top = 16.0
margin_right = 72.0
margin_bottom = 29.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton5" type="Button" parent="UI/BattleActionButtons"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 45.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton6" type="Button" parent="UI/BattleActionButtons"]
margin_left = 40.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 45.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton7" type="Button" parent="UI/BattleActionButtons"]
margin_top = 48.0
margin_right = 32.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordButton8" type="Button" parent="UI/BattleActionButtons"]
margin_left = 40.0
margin_top = 48.0
margin_right = 72.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 13 )
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="died" from="Enemy" to="." method="_on_Enemy_died"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton2" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton3" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton4" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton5" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton6" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton7" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton8" to="." method="_on_SwordButton_pressed"]
